--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-// spring.application.name=calculo-impostos
+spring.application.name=calculo-impostos
 
 spring.datasource.url=jdbc:h2:mem:impostosdb
 spring.datasource.driverClassName=org.h2.Driver
