--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=calculo-impostos
-
+spring.main.allow-circular-references=true
 spring.datasource.url=jdbc:h2:mem:impostosdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -7,4 +7,5 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+
 
